fix: Rotating the x-axis text to prevent overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .label {
   font-size: 12px;
+  width: 40px;
 }
 
 .bar:hover {
